@@ -13,7 +13,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.powsybl.cgmes.conversion.elements.hvdc.IslandEndHvdc.HvdcEnd;
 import com.powsybl.cgmes.conversion.elements.hvdc.IslandEndHvdc.HvdcEndType;
@@ -49,7 +48,7 @@ class Hvdc {
         Associations associations = new Associations();
         islandEndHvdc1.getHvdc().forEach(hvdcEnd -> {
             List<HvdcEnd> associatedEnd2 = islandEndHvdc2.getHvdc().stream()
-                .filter(otherHvdcEnd -> otherHvdcEnd.isAssociatedWith(hvdcEnd)).collect(Collectors.toList());
+                .filter(otherHvdcEnd -> otherHvdcEnd.isAssociatedWith(hvdcEnd)).toList();
 
             associatedEnd2.forEach(otherHvdcEnd -> associations.add(hvdcEnd, otherHvdcEnd));
         });
